/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Interface.java to edit this template
 */
package com.k2600143.slms.observer;

import com.k2600143.slms.observer.K2600143_Notification;

/**
 *
 * @author arunagamage
 */
public interface K2600143_NotificationObserver {
    void onNotify(K2600143_Notification notification);
}

